--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,12 @@
 layout: default
 ---
 <h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<p class="meta">{{ page.date | date_to_string }}, <a href="{{ page.url }}/#disqus_thread"></a></p>
 
 <div class="post">
 {{ content }}
 </div>
+
+<div id="disqus_thread"></div>
+
+
