--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,9 @@
-      </div>
-      <div class="col-xs-6 col-lg-4">
-        <img src="http://www.gravatar.com/avatar/6dd68384f2531c71234d21602d7f5b22" class="img-circle"/><h3>Kristian Rasmussen</h3>
+        </div>
+        <div class="col-xs-6 col-lg-4">
+          <img src="http://www.gravatar.com/avatar/6dd68384f2531c71234d21602d7f5b22" class="img-circle"/><h3>Kristian Rasmussen</h3>
 
-       <a href="https://twitter.com/iamkristian" class="twitter-follow-button" data-show-count="false" data-size="large" data-lang="en">Follow @iamkristian</a>
-       <h4><a href="/about">about</a></h4>
-       <h4><a href="http://github.com/iamkristian">github</a></h4>
-       <h4><a href="http://twitter.com/iamkristian">twitter</a></h4>
+         <a href="https://twitter.com/iamkristian" class="twitter-follow-button" data-show-count="false" data-size="large" data-lang="en">Follow @iamkristian</a>
+        </div>
       </div>
     </div>
   </div>
@@ -27,6 +25,7 @@
    }());
   </script>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
