--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta charset="utf-8">
@@ -15,10 +15,32 @@
 
   </head>
 <body>
+  <div id="wrapper">
+  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Front</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/about">about</a></li>
+          <li><a href="http://github.com/iamkristian">github</a></li>
+          <li><a href="http://twitter.com/iamkristian">twitter</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
     <div class="page-header">
       <h1><a href="/">{{ site.name }}</a><br/>
-        <small>... ideas and thoughts</small>
+        <small>Notes and thoughts</small>
       </h1>
     </div>
   </div>
