--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Front</a>
+        <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span></a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
