--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta charset="utf-8">
-    <title>{{ page.title }}</title>
+    <title>krx.io | {{ page.title }}</title>
 
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
