Some layout updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
         </div>
         <div class="col-xs-6 col-lg-4">
+          <p>{% include short_description.html %}</p>
           <img src="http://www.gravatar.com/avatar/6dd68384f2531c71234d21602d7f5b22" class="img-circle"/><h3>Kristian Rasmussen</h3>
 
          <a href="https://twitter.com/iamkristian" class="twitter-follow-button" data-show-count="false" data-size="large" data-lang="en">Follow @iamkristian</a>
@@ -7,6 +8,12 @@
       </div>
     </div>
   </div>
+    <div id="footer">
+      <div class="container">
+        <p class="text-muted">&copy; 2014 Kristian Rasmussen</p>
+      </div>
+    </div>
+
   <script type="text/javascript">
   var disqus_shortname = 'iamkristian'; // required: replace example with your forum shortname
 
