--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/syntax.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/krx.css">
 
   </head>
 <body>
@@ -29,9 +29,8 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/about">about</a></li>
-          <li><a href="http://github.com/iamkristian">github</a></li>
-          <li><a href="http://twitter.com/iamkristian">twitter</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="http://github.com/iamkristian">Github</a></li>
         </ul>
       </div>
     </div>
@@ -40,7 +39,7 @@
   <div class="container">
     <div class="page-header">
       <h1><a href="/">{{ site.name }}</a><br/>
-        <small>Notes and thoughts</small>
+        <small>cat /dev/brain | grep -e code -e creative >> krx.io</small>
       </h1>
     </div>
   </div>
