--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
+<h1>{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}, <a href="{{ page.url }}/#disqus_thread"></a></p>
 
-<div class="post">
+<div class="post markdown">
 {{ content }}
 </div>
 
