Adding rss link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
   </div>
     <div id="footer">
       <div class="container">
-        <p class="text-muted">&copy; 2014 Kristian Rasmussen</p>
+        <p class="text-muted">&copy; 2014 Kristian Rasmussen | <a href="/atom.xml">RSS</a></p>
       </div>
     </div>
 
