Update to styling

--- a/scss/_brand.scss
+++ b/scss/_brand.scss
@@ -24,3 +24,21 @@ a, a i,
     text-decoration: none;
   }
 }
+
+h1 {
+  code, kbd, pre, samp {
+    font-size: inherit;
+  }
+}
+
+h2 {
+  code, kbd, pre, samp {
+    font-size: inherit;
+  }
+}
+
+h3 {
+  code, kbd, pre, samp {
+    font-size: inherit;
+  }
+}
