update link colors

--- a/scss/_brand.scss
+++ b/scss/_brand.scss
@@ -11,7 +11,7 @@ a, a i,
 .navbar-default .navbar-nav > li > a,  {
   background-color: #fff;
   text-decoration: none;
-  color: $black;
+  color: #777;
   transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -webkit-transition: all .3s ease-in-out;
