Update header links

--- a/scss/_brand.scss
+++ b/scss/_brand.scss
@@ -6,7 +6,7 @@ $earth: #c1a163;
 $grey: #F7F7F7;
 $footer-grey: #787878;
 
-a, a i,
+a, a i, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a,  {
   background-color: #fff;
