--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,23 @@
-        </div>
-        <div class="col-xs-6 col-lg-4">
-          <p>{% include short_description.html %}</p>
-          <img src="http://www.gravatar.com/avatar/6dd68384f2531c71234d21602d7f5b22" class="img-circle"/><h3>Kristian Rasmussen</h3>
-
-         <a href="https://twitter.com/iamkristian" class="twitter-follow-button" data-show-count="false" data-size="large" data-lang="en">Follow @iamkristian</a>
-        </div>
       </div>
     </div>
   </div>
     <div id="footer">
       <div class="container">
-        <p class="text-muted">&copy; 2014 Kristian Rasmussen | <a href="/atom.xml">RSS</a></p>
+        <div class="row">
+          <div class="col-sm-3">
+            <hr>
+            <small>
+              <script>
+                var d = 'krx.io';
+                var e = 'me';
+                document.write('<a href="mailto:' + e + '@' + d + '">Kristian Rasmussen</a>');
+              </script><br/>
+              Find me on <a href="https://twitter.com/iamkristian">twitter</a><br/>
+              <a href="/atom.xml">RSS</a>
+            </small>
+          </div>
+        </div>
+
       </div>
     </div>
 
