--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,10 @@
    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
   })();
+  </script>
 
+  <script type="text/javascript">
+  var disqus_shortname = 'iamkristian'; // required: replace example with your forum shortname
   (function () {
    var s = document.createElement('script'); s.async = true;
    s.type = 'text/javascript';
