--- a/_sass/krx.scss
+++ b/_sass/krx.scss
@@ -1,6 +1,3 @@
----
----
-
 @import 'bootstrap.min';
 @import 'brand';
 @import 'markdown';
@@ -47,4 +44,8 @@ body {
   width: 100%;
   text-align: right;
   padding-top: 30px;
+}
+
+cite {
+  font-style: italic;
 }
