--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,7 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/about">About</a></li>
+          <li><a href="/training">Training motivation</a></li>
           <li><a href="http://github.com/iamkristian">Github</a></li>
         </ul>
       </div>
