--- a/_sass/_markdown.scss
+++ b/_sass/_markdown.scss
@@ -34,7 +34,7 @@
     position: relative;
   }
 
-  p, blockquote, ul, ol, dl, table, pre {
+  p, blockquote, ul, ol, dl, table {
     margin: 15px 0;
   }
   blockquote {
