adding a 404 page and some layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
   <div class="container">
     <div class="page-header">
       <h1><a href="/">{{ site.name }}</a><br/>
-        <small>cat /dev/brain | grep -e code -e creative >> krx.io</small>
+        <small></small>
       </h1>
     </div>
   </div>
