--- a/_sass/krx.scss
+++ b/_sass/krx.scss
@@ -8,6 +8,11 @@ body {
   height: 100%;
 }
 
+.markdown {
+  margin-top: 35px;
+  margin-bottom: 35px;
+}
+
 #wrapper {
   min-height: 100%;
   height: auto;
