--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,14 +23,22 @@ layout: default
     {%- endif -%}
     <ul class="post-list">
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      {%- for post in posts -%}
+      {%- for post in paginator.posts -%}
       <li>
         <span class="post-meta">{{ post.date | date: date_format }}</span>
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
+            {%- if post.image_thumb -%}
+            <img src="/assets/images/{{ post.image_thumb }}" alt=""/>
+            {% endif %}
+
+            <br/>
             {{ post.title | escape }}
           </a>
         </h3>
+        {%- if post.subtitle -%}
+        <p>{{ post.subtitle }}</p>
+        {%- endif -%}
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
@@ -38,7 +46,7 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    {% if site.paginate %}
+    {% if paginator.total_pages > 1 %}
       <div class="pager">
         <ul class="pagination">
         {%- if paginator.previous_page %}
