--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,6 +9,8 @@ layout: default
 
   {{ content }}
 
+  {% assign posts = paginator.posts %}
+  
   {%- if posts.size > 0 -%}
     {%- if page.list_title -%}
       <h2 class="post-list-heading">{{ page.list_title }}</h2>
