--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,7 +10,7 @@ layout: default
   {{ content }}
 
   {% assign posts = paginator.posts %}
-  
+  post size {{ posts.size }}
   {%- if posts.size > 0 -%}
     {%- if page.list_title -%}
       <h2 class="post-list-heading">{{ page.list_title }}</h2>
