--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,9 +9,11 @@ layout: default
 
   {{ content }}
 
+  {% comment %}
   {% assign posts = paginator.posts %}
   post size {{ posts.size }}
   {%- if posts.size > 0 -%}
+  {% endcomment %}
     {%- if page.list_title -%}
       <h2 class="post-list-heading">{{ page.list_title }}</h2>
     {%- endif -%}
@@ -57,7 +59,7 @@ layout: default
         </ul>
       </div>
     {%- endif %}
-
+{% comment %}
   {%- endif -%}
-
+{% endcomment %}
 </div>
