--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,12 +17,25 @@
           </span>
         </label>
 
+
+        {%- for p in page_paths -%}
+          {{ p  }}
+        {%- endfor -%}
+
+        {% comment %}
         <div class="trigger">
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
+          {%- endfor -%}
+        </div>
+        {% endcomment %}
+
+        <div class="trigger">
+          {%- for p in site.pages -%}
+          <a class="page-link" href="{{ p.url | relative_url }}">{{ p.title | escape }} ({{ p.path }})</a>
           {%- endfor -%}
         </div>
       </nav>
