--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,9 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title | escape }}</h1>
+    {%- if page.image -%}
+    <img class="post-image" src="/assets/images/{{ page.image }}" alt=""/>
+    {%- endif %}
   </header>
 
   <div class="post-content">
