--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,2 +1,20 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
+
+.post-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-flow: row wrap;
+  justify-content: start;
+  margin-left: auto;
+  margin-right: auto;
+  .post {
+    display: inline-block;
+    margin-left: 15px;
+    max-width: 350px;
+    .post-title {
+      overflow-wrap: anywhere;
+      margin-bottom: 10px;
+    }
+  }
+}
