--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -10,11 +10,15 @@
   margin-right: auto;
   .post {
     display: inline-block;
-    margin-left: 15px;
+    margin-right: 15px;
     max-width: 350px;
     .post-title {
       overflow-wrap: anywhere;
       margin-bottom: 10px;
     }
   }
+}
+
+.header-image {
+  margin-bottom: 15px;
 }
