--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,36 +6,11 @@ layout: default
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
-fish
   {{ content }}
 
     {%- if page.list_title -%}
       <h2 class="post-list-heading">{{ page.list_title }}</h2>
     {%- endif -%}
-    {% comment %}
-    <ul class="post-list">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      {%- for post in paginator.posts -%}
-      <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-          <a class="post-thumb-link" href="{{ post.url | relative_url }}">
-            {%- if post.image_thumb -%}
-            <img class="post-thumb" src="/assets/images/{{ post.image_thumb }}" alt=""/>
-            {% endif %}
-          </a>
-          <h3 class="post-title">
-            <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-          </h3>
-        {%- if post.subtitle -%}
-        <p class="post-subtitle">{{ post.subtitle }}</p>
-        {%- endif -%}
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
-    {% endcomment %}
 
     <div class="post-wrapper">
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
@@ -58,22 +33,16 @@ fish
         {%- endif -%}
       </div>
       {%- endfor -%}
-
     </div>
 
     {% if paginator.total_pages > 1 %}
       <div class="pager">
         <ul class="pagination">
         {%- if paginator.previous_page %}
-          <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
-        {%- else %}
-          <li><div class="pager-edge">•</div></li>
+          <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">Newer posts</a></li>
         {%- endif %}
-          <li><div class="current-page">{{ paginator.page }}</div></li>
         {%- if paginator.next_page %}
-          <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
-        {%- else %}
-          <li><div class="pager-edge">•</div></li>
+          <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">Older posts</a></li>
         {%- endif %}
         </ul>
       </div>
