--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -5,13 +5,15 @@
   display: flex;
   flex-direction: column;
   flex-flow: row wrap;
-  justify-content: start;
+  justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
   .post {
     display: inline-block;
-    margin-right: 15px;
+//    margin-right: 15px;
+    margin-bottom: 30px;
     max-width: 350px;
+    min-width: 350px;
     .post-title {
       overflow-wrap: anywhere;
       margin-bottom: 10px;
