--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,9 +323,9 @@ table td { border: 1px solid var(--solarized-mono1); }
 /** Grid helpers */
 @media screen and (min-width: 800px) { .one-half { width: calc(50% - (30px / 2)); } }
 
-.post-wrapper { display: flex; flex-direction: column; flex-flow: row wrap; justify-content: start; margin-left: auto; margin-right: auto; }
+.post-wrapper { display: flex; flex-direction: column; flex-flow: row wrap; justify-content: space-between; margin-left: auto; margin-right: auto; }
 
-.post-wrapper .post { display: inline-block; margin-right: 15px; max-width: 350px; }
+.post-wrapper .post { display: inline-block; margin-bottom: 30px; max-width: 350px; min-width: 350px; }
 
 .post-wrapper .post .post-title { overflow-wrap: anywhere; margin-bottom: 10px; }
 
