--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,8 @@
             </svg><span>Subscribe</span>
           </a>
         </p>
+
+        <p>Don't be a stranger - Reach out on the mail below, if you want to say hi. - And I'll get back to you with an answer within a couple of days.</p>
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
