--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -5,3 +5,12 @@
   2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet.
 {% endcomment %}
 <link rel="shortcut icon" type="image/x-icon" href="/favicon-32x32.png"/>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1HT6KGZ2PZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1HT6KGZ2PZ');
+</script>
