--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
             <li class="p-name">{{ site.author.name | escape }}</li>
           {% endif -%}
           {% if site.author.email -%}
-            <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
+            <li><code>{{ site.author.email }}</code></li>
           {%- endif %}
         </ul>
       {%- endif %}
